Fix spacing-issues in CSS

--- a/src/App.css
+++ b/src/App.css
@@ -148,11 +148,13 @@ h1 {
 }
 
 .page-section {
+    width: 100%;
+    box-sizing: border-box;
     max-width: 800px;
     margin-bottom: 5em;
     text-align: justify;
-    margin-left: 15px;
-    margin-right: 15px;
+    padding-left: 15px;
+    padding-right: 15px;
 }
 
 .page-container {
